--- a/public/style.css
+++ b/public/style.css
@@ -515,8 +515,8 @@ video {
 .fixed {
   position: fixed;
 }
-.relative {
-  position: relative;
+.sticky {
+  position: sticky;
 }
 .inset-x-0 {
   left: 0px;
@@ -524,6 +524,9 @@ video {
 }
 .bottom-0 {
   bottom: 0px;
+}
+.top-\[100vh\] {
+  top: 100vh;
 }
 .z-50 {
   z-index: 50;
@@ -537,14 +540,8 @@ video {
 .col-start-2 {
   grid-column-start: 2;
 }
-.col-end-12 {
-  grid-column-end: 12;
-}
 .col-end-2 {
   grid-column-end: 2;
-}
-.col-end-13 {
-  grid-column-end: 13;
 }
 .mx-0 {
   margin-left: 0px;
@@ -574,6 +571,10 @@ video {
   margin-top: auto;
   margin-bottom: auto;
 }
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
 .mb-16 {
   margin-bottom: 4rem;
 }
@@ -586,8 +587,8 @@ video {
 .mt-0 {
   margin-top: 0px;
 }
-.mt-7 {
-  margin-top: 1.75rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 .mt-8 {
   margin-top: 2rem;
@@ -620,11 +621,8 @@ video {
   height: -moz-fit-content;
   height: fit-content;
 }
-.h-full {
-  height: 100%;
-}
-.min-h-full {
-  min-height: 100%;
+.min-h-screen {
+  min-height: 100vh;
 }
 .w-60 {
   width: 15rem;
@@ -635,23 +633,11 @@ video {
 .max-w-2xl {
   max-width: 42rem;
 }
-.flex-none {
-  flex: none;
-}
 .resize {
   resize: both;
 }
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-.flex-col {
-  flex-direction: column;
-}
-.flex-wrap {
-  flex-wrap: wrap;
 }
 .place-content-center {
   place-content: center;
@@ -686,6 +672,9 @@ video {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.rounded-lg {
+  border-radius: 0.5rem;
+}
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -696,21 +685,77 @@ video {
 .border {
   border-width: 1px;
 }
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+.border-fuchsia-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(217 70 239 / var(--tw-border-opacity));
+}
+.border-green-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(22 163 74 / var(--tw-border-opacity));
+}
+.border-indigo-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
+}
 .border-orange-500 {
   --tw-border-opacity: 1;
   border-color: rgb(249 115 22 / var(--tw-border-opacity));
+}
+.border-pink-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(236 72 153 / var(--tw-border-opacity));
+}
+.border-green-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(74 222 128 / var(--tw-border-opacity));
+}
+.border-orange-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(251 146 60 / var(--tw-border-opacity));
+}
+.border-pink-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(244 114 182 / var(--tw-border-opacity));
+}
+.border-blue-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
+}
+.border-indigo-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(129 140 248 / var(--tw-border-opacity));
+}
+.border-fuchsia-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(232 121 249 / var(--tw-border-opacity));
 }
 .bg-amber-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(251 191 36 / var(--tw-bg-opacity));
 }
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
+.bg-fuchsia-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 121 249 / var(--tw-bg-opacity));
+}
 .bg-fuchsia-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(217 70 239 / var(--tw-bg-opacity));
+}
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 .bg-green-600 {
   --tw-bg-opacity: 1;
@@ -720,13 +765,29 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
+.bg-orange-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
 .bg-orange-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
+.bg-pink-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 114 182 / var(--tw-bg-opacity));
+}
 .bg-pink-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 72 153 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+.bg-teal-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity));
 }
 .bg-transparent {
   background-color: transparent;
@@ -742,14 +803,26 @@ video {
 .bg-150 {
   background-size: auto 150px;
 }
+.fill-blue-400 {
+  fill: #60a5fa;
+}
 .fill-blue-500 {
   fill: #3b82f6;
+}
+.fill-green-400 {
+  fill: #4ade80;
 }
 .fill-green-600 {
   fill: #16a34a;
 }
+.fill-pink-400 {
+  fill: #f472b6;
+}
 .fill-pink-500 {
   fill: #ec4899;
+}
+.fill-teal-400 {
+  fill: #2dd4bf;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -775,6 +848,10 @@ video {
   padding-top: 0px;
   padding-bottom: 0px;
 }
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
 .pb-16 {
   padding-bottom: 4rem;
 }
@@ -796,8 +873,14 @@ video {
 .pt-4 {
   padding-top: 1rem;
 }
-.pt-0 {
-  padding-top: 0px;
+.pt-3\.5 {
+  padding-top: 0.875rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
+.pt-8 {
+  padding-top: 2rem;
 }
 .text-center {
   text-align: center;
@@ -828,13 +911,66 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
+}
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-blue-500 {
+  --tw-shadow-color: #3b82f6;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-fuchsia-500 {
+  --tw-shadow-color: #d946ef;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-green-600 {
+  --tw-shadow-color: #16a34a;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-indigo-500 {
+  --tw-shadow-color: #6366f1;
+  --tw-shadow: var(--tw-shadow-colored);
+}
 .shadow-orange-500 {
   --tw-shadow-color: #f97316;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-pink-500 {
+  --tw-shadow-color: #ec4899;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-green-400 {
+  --tw-shadow-color: #4ade80;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-orange-400 {
+  --tw-shadow-color: #fb923c;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-pink-400 {
+  --tw-shadow-color: #f472b6;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-blue-400 {
+  --tw-shadow-color: #60a5fa;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-indigo-400 {
+  --tw-shadow-color: #818cf8;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-fuchsia-400 {
+  --tw-shadow-color: #e879f9;
   --tw-shadow: var(--tw-shadow-colored);
 }
 .ring-1 {
@@ -999,19 +1135,26 @@ html, body {
 .menuanim{
 	width: 225px;
 }
-.animate-charcter-rose:hover {
+.animate-charcter {
 	transition: color 0.5s linear;
-	color: #ec4899;
-}
-.animate-charcter-vert:hover {
-	transition: color 0.5s linear;
-	color: #16a34a;
-}
-.animate-charcter-bleu:hover {
-	transition: color 0.5s linear;
-	color: #3b82f6;
 }
 /* fin */
+.hover\:text-teal-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(45 212 191 / var(--tw-text-opacity));
+}
+.hover\:text-blue-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+.hover\:text-green-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
+}
+.hover\:text-pink-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(244 114 182 / var(--tw-text-opacity));
+}
 @media (min-width: 768px) {
 
   .md\:mr-10 {
@@ -1086,14 +1229,6 @@ html, body {
 }
 @media (min-width: 1280px) {
 
-  .xl\:col-start-2 {
-    grid-column-start: 2;
-  }
-
-  .xl\:col-end-12 {
-    grid-column-end: 12;
-  }
-
   .xl\:mr-0 {
     margin-right: 0px;
   }
@@ -1105,6 +1240,10 @@ html, body {
   .xl\:max-w-5xl {
     max-width: 64rem;
   }
+
+  .xl\:max-w-7xl {
+    max-width: 80rem;
+  }
 }
 @media (min-width: 1536px) {
 
@@ -1114,6 +1253,10 @@ html, body {
 
   .\32xl\:max-w-7xl {
     max-width: 80rem;
+  }
+
+  .\32xl\:max-w-screen-2xl {
+    max-width: 1536px;
   }
 
   .\32xl\:bg-300 {
