--- a/public/style.css
+++ b/public/style.css
@@ -515,6 +515,12 @@ video {
 .fixed {
   position: fixed;
 }
+.absolute {
+  position: absolute;
+}
+.relative {
+  position: relative;
+}
 .sticky {
   position: sticky;
 }
@@ -527,6 +533,12 @@ video {
 }
 .top-\[100vh\] {
   top: 100vh;
+}
+.z-0 {
+  z-index: 0;
+}
+.z-20 {
+  z-index: 20;
 }
 .z-50 {
   z-index: 50;
@@ -555,6 +567,10 @@ video {
   margin-left: 1rem;
   margin-right: 1rem;
 }
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -570,10 +586,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
 }
 .mb-16 {
   margin-bottom: 4rem;
@@ -604,6 +616,9 @@ video {
 }
 .grid {
   display: grid;
+}
+.inline-grid {
+  display: inline-grid;
 }
 .hidden {
   display: none;
@@ -685,33 +700,21 @@ video {
 .border {
   border-width: 1px;
 }
-.border-blue-500 {
+.border-blue-400 {
   --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
 }
-.border-fuchsia-500 {
+.border-fuchsia-400 {
   --tw-border-opacity: 1;
-  border-color: rgb(217 70 239 / var(--tw-border-opacity));
-}
-.border-green-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(22 163 74 / var(--tw-border-opacity));
-}
-.border-indigo-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(99 102 241 / var(--tw-border-opacity));
-}
-.border-orange-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(249 115 22 / var(--tw-border-opacity));
-}
-.border-pink-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(236 72 153 / var(--tw-border-opacity));
+  border-color: rgb(232 121 249 / var(--tw-border-opacity));
 }
 .border-green-400 {
   --tw-border-opacity: 1;
   border-color: rgb(74 222 128 / var(--tw-border-opacity));
+}
+.border-indigo-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(129 140 248 / var(--tw-border-opacity));
 }
 .border-orange-400 {
   --tw-border-opacity: 1;
@@ -721,18 +724,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(244 114 182 / var(--tw-border-opacity));
 }
-.border-blue-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity));
-}
-.border-indigo-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(129 140 248 / var(--tw-border-opacity));
-}
-.border-fuchsia-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(232 121 249 / var(--tw-border-opacity));
-}
 .bg-amber-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(251 191 36 / var(--tw-bg-opacity));
@@ -741,49 +732,21 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
 .bg-fuchsia-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(232 121 249 / var(--tw-bg-opacity));
-}
-.bg-fuchsia-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 70 239 / var(--tw-bg-opacity));
 }
 .bg-green-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-.bg-indigo-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
-}
 .bg-orange-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
-.bg-orange-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
-}
 .bg-pink-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(244 114 182 / var(--tw-bg-opacity));
-}
-.bg-pink-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
-}
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-teal-400 {
   --tw-bg-opacity: 1;
@@ -806,20 +769,11 @@ video {
 .fill-blue-400 {
   fill: #60a5fa;
 }
-.fill-blue-500 {
-  fill: #3b82f6;
-}
 .fill-green-400 {
   fill: #4ade80;
 }
-.fill-green-600 {
-  fill: #16a34a;
-}
 .fill-pink-400 {
   fill: #f472b6;
-}
-.fill-pink-500 {
-  fill: #ec4899;
 }
 .fill-teal-400 {
   fill: #2dd4bf;
@@ -831,10 +785,6 @@ video {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
-}
-.px-3\.5 {
-  padding-left: 0.875rem;
-  padding-right: 0.875rem;
 }
 .px-5 {
   padding-left: 1.25rem;
@@ -864,20 +814,14 @@ video {
 .pt-1 {
   padding-top: 0.25rem;
 }
-.pt-16 {
-  padding-top: 4rem;
-}
 .pt-3 {
   padding-top: 0.75rem;
-}
-.pt-4 {
-  padding-top: 1rem;
 }
 .pt-3\.5 {
   padding-top: 0.875rem;
 }
-.pb-8 {
-  padding-bottom: 2rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -893,10 +837,6 @@ video {
   font-size: 3rem;
   line-height: 1;
 }
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -907,13 +847,13 @@ video {
 .font-semibold {
   font-weight: 600;
 }
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
 .text-green-400 {
   --tw-text-opacity: 1;
   color: rgb(74 222 128 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -925,32 +865,20 @@ video {
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-blue-500 {
-  --tw-shadow-color: #3b82f6;
+.shadow-blue-400 {
+  --tw-shadow-color: #60a5fa;
   --tw-shadow: var(--tw-shadow-colored);
 }
-.shadow-fuchsia-500 {
-  --tw-shadow-color: #d946ef;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-green-600 {
-  --tw-shadow-color: #16a34a;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-indigo-500 {
-  --tw-shadow-color: #6366f1;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-orange-500 {
-  --tw-shadow-color: #f97316;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-pink-500 {
-  --tw-shadow-color: #ec4899;
+.shadow-fuchsia-400 {
+  --tw-shadow-color: #e879f9;
   --tw-shadow: var(--tw-shadow-colored);
 }
 .shadow-green-400 {
   --tw-shadow-color: #4ade80;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+.shadow-indigo-400 {
+  --tw-shadow-color: #818cf8;
   --tw-shadow: var(--tw-shadow-colored);
 }
 .shadow-orange-400 {
@@ -959,18 +887,6 @@ video {
 }
 .shadow-pink-400 {
   --tw-shadow-color: #f472b6;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-blue-400 {
-  --tw-shadow-color: #60a5fa;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-indigo-400 {
-  --tw-shadow-color: #818cf8;
-  --tw-shadow: var(--tw-shadow-colored);
-}
-.shadow-fuchsia-400 {
-  --tw-shadow-color: #e879f9;
   --tw-shadow: var(--tw-shadow-colored);
 }
 .ring-1 {
@@ -1115,6 +1031,12 @@ html, body {
 	border-bottom:1px solid #fff;
 	background-position:50% top;
   }
+  .header-bg-19 {
+	background-image: url(img/header-19.jpg);
+	background-repeat:no-repeat;
+	border-bottom:1px solid #fff;
+	background-position:50% top;
+  }
 /*fin*/
 
 /* menu 2 */
@@ -1139,9 +1061,17 @@ html, body {
 	transition: color 0.5s linear;
 }
 /* fin */
-.hover\:text-teal-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(45 212 191 / var(--tw-text-opacity));
+.anim-apparition {
+	animation: apparition 2s ease 0s 1 normal forwards;
+}
+@keyframes apparition {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
 .hover\:text-blue-400:hover {
   --tw-text-opacity: 1;
@@ -1154,6 +1084,10 @@ html, body {
 .hover\:text-pink-400:hover {
   --tw-text-opacity: 1;
   color: rgb(244 114 182 / var(--tw-text-opacity));
+}
+.hover\:text-teal-400:hover {
+  --tw-text-opacity: 1;
+  color: rgb(45 212 191 / var(--tw-text-opacity));
 }
 @media (min-width: 768px) {
 
@@ -1201,10 +1135,6 @@ html, body {
 
   .lg\:inline-flex {
     display: inline-flex;
-  }
-
-  .lg\:inline-grid {
-    display: inline-grid;
   }
 
   .lg\:hidden {
